--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div id="p5" class="screen">
         <h1 id="userNameDisplay" style="margin-bottom: 10px;"></h1>
         <img src="schwein.jpg" alt="Überraschung" class="final-image">
-        <p style="margin-top: 20px; font-style: italic;">"Leg dich nicht mit mir an."</p>
+        <p style="margin-top: 20px; font-style: italic;">"Wer Wind sät, wird Sturm ernten."</p>
     </div>
 
     <script>
